--- a/public/projekty/skolni_projekt/src/App.css
+++ b/public/projekty/skolni_projekt/src/App.css
@@ -1,38 +1,129 @@
-.App {
+nav {
+  margin: auto;
+  background-color: #333;
+}
+
+nav ul {
+  text-align: right;
+  margin: 0;
+  padding: 2.3rem 1.5rem;
+}
+
+nav ul li {
+  float: none;
+  display: inline-block;
+}
+
+nav ul li:nth-child(1),
+nav ul li:nth-child(2) {
+  float: left;
+}
+
+nav ul li a {
+  display: block;
+  font-size: 2rem;
+  padding: 1rem;
+  text-decoration: none;
+  color: #efefed;
+  font-weight: 800;
+  text-transform: uppercase;
+  margin: 0 2rem;
+}
+
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+  transition: all 0.5s;
+}
+
+nav ul li a:hover {
+  color: #252525;
+  z-index: 1;
+}
+
+nav ul li a {
+  position: relative;
+}
+
+@keyframes fill {
+  0% {
+    width: 0%;
+    height: 1px;
+  }
+  50% {
+    width: 100%;
+    height: 1px;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    background: #aaa;
+  }
+}
+
+nav ul li a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: ".";
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+}
+
+nav ul li a {
+  transition: all 2s;
+}
+
+nav ul li a:after {
+  text-align: left;
+  content: ".";
+  margin: 0;
+  opacity: 0;
+}
+
+nav ul li a.active,
+nav ul li a:hover {
+  background-color: #aaa;
+  color: #252525;
+  z-index: 1;
+}
+
+nav ul li a:hover:after {
+  z-index: -10;
+  animation: fill 1s forwards;
+  -webkit-animation: fill 1s forwards;
+  -moz-animation: fill 1s forwards;
+  opacity: 1;
+}
+
+nav .logo {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  margin-top: 1.5rem;
+}
+
+.logo img {
+  height: 6rem;
+}
+
+h1 {
   text-align: center;
+  font-size: 3.5rem;
+}
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+  background-color: #333;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer p {
+  color: #efefed;
+  font-size: 1.5rem;
 }
