--- a/public/projekty/skolni_projekt/src/index.css
+++ b/public/projekty/skolni_projekt/src/index.css
@@ -4,6 +4,7 @@ html {
 
 body {
   margin: 0;
+  padding-bottom: 50px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
