--- a/public/projekty/canvas/css/style.css
+++ b/public/projekty/canvas/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 canvas {
-  border: 1px solid #000000;
+  border: 4px solid #000000;
   background-color: #efefed;
   height: 250px;
   width: 390px;
@@ -25,5 +25,11 @@ canvas {
 h1 {
   margin: 20px;
   color: #efefed;
-  font-size: 3vw;
+  font-size: 30px;
+}
+
+@media only screen and (max-width: 400px) {
+  canvas {
+    width: 80vw;
+  }
 }
